[project]
name = "VaultAPI-Client"
dynamic = ["version"]
description = "Client application for VaultAPI Server"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]
keywords = ["vaultapi", "vault", "fastapi", "sqlite3", "fernet"]
requires-python = ">=3.10"

[tool.setuptools]
packages = [
    "vaultapi"
]

[tool.setuptools.dynamic]
version = {attr = "vaultapi.version"}

[project.optional-dependencies]
dev = ["pre-commit"]

[project.scripts]
# sends all the args to commandline function, where the arbitary commands as processed accordingly
vaultapi = "vaultapi:commandline"

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thevickypedia/VaultAPI-Client-python"
Source = "https://github.com/thevickypedia/VaultAPI-Client-python"
